# t-search

./: .gitignore  README.md  alg_bench.py  early_exit.py  environment.yml  gp.py  initialization.py  math_props.py  mutation.py  pyproject.toml  selection.py  semantics.py  spatial.py  syntax.py  term.py  term_spatial.py  togif.sh  torch_alg.py  torch_alg_inv.py  util.py
operators/: __init__.py  base.py
operators/crossover/: __init__.py  base.py  cx.py  rpx.py  sdx.py  sgx.py
operators/mutation/: __init__.py  base.py  best_inner.py  cm.py  co.py  dedupl.py  po.py  reduce.py  rpm.py  sdm.py  sgm.py
operators/selection/: __init__.py  base.py  cts.py  elitism.py  finite.py  lexicase.py  sts.py  ts.py
t_search/: solver.py  syntax.py  term.py  term_spatial.py  torch_alg.py  torch_alg_inv.py  util.py
t_search/datasets/: __init__.py  algebra.py  benchmark.py  sampling.py
t_search/operators/: __init__.py  base.py  competent.py
t_search/operators/crossover/: base.py  cx.py  rpx.py  sdx.py  sgx.py
t_search/operators/initialization/: __init__.py  base.py  ci.py  rhh.py  sdi.py  up2d.py
t_search/operators/mutation/: base.py  best_inner.py  cm.py  co.py  dedupl.py  optimization.py  po.py  po_ideas.py.txt  reduce.py  rpm.py  sdm.py  sgm.py
t_search/operators/selection/: base.py  (+6 more)
t_search/spatial/: __init__.py  base.py  bin.py  cos.py  grid.py  inter.py  rtree.py  spearman.py  term_spatial.py
t_search/syntax/: __init__.py  evaluation.py  flow.py  generation.py  replacement.py  stats.py  str.py  term.py  traverse.py  unification.py  validation.py
t_search/utils/: metrics.py
tests/: test_indices.py  test_t1.py  test_terms.py
